Minor modifications on index.html file made the ying yang image bigger and changed class name small-white-text to medium-white-text

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header class="header dark-bg">
             <!--we'll also have a display column to put the hero section under the navbar-->
             <nav class="navbar">
-                <div class="logo small-white-text">Header Logo</div>
+                <div class="logo medium-white-text">Header Logo</div>
 
-                <ul>
+                <ul class="nav-links">
                     <li><a href="#">header link one</a></li>
                     <li><a href="#">header link two</a></li>
                     <li><a href="#">header link three</a></li>
@@ -35,7 +35,7 @@
                         It's a smaller font and the color is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
-                <img src="img/ying-yang.png" alt="ying and yang symbol" width="150" height="150">
+                <img src="img/ying-yang.png" alt="ying and yang symbol" width="250" height="250">
             </div>
         </header>
 
@@ -74,7 +74,7 @@
             <section class="Join">
                 <h3>Join us!</h3>
                 <div class="blue">
-                    <p class="small-white-text">Call to action! it's time!</p>
+                    <p class="medium-white-text">Call to action! it's time!</p>
                     <p>sign up to join for our product by clicking that button right over there!</p>
                 </div>
                 <button class="join-button">Sign up</button>
