Added a few classes to the index.html
Added a class to the h3 of my first section
i want to style only the h3 text

Created a div container for all the images and their text
this will allow me to align all the images along
with their text horizontally

Renamed illustration-questions to illustration-text

--- a/index.html
+++ b/index.html
@@ -42,27 +42,28 @@
         <main>
             <!--we'll have three different section as direct child of the main
             one above the other so column-->
-            <section class="illustration-questions">
-                <h3>Some random information</h3>
-                <div class="wrap-image-text">
-                    <img src="img/life-meaning.jpg" alt="an image with the text the meaning of life" width="150"
-                        height="150">
-                    <p>what is the meaning of life?</p>
+            <section class="illustration-text">
+                <h3 class="text-center-bold">Some random information</h3>
+                <div class="container-images">
+                    <div class="wrap-image-text">
+                        <img src="img/life-meaning.jpg" alt="an image with the text the meaning of life" width="150"
+                            height="150">
+                        <p>what is the meaning of life?</p>
+                    </div>
+                    <div class="wrap-image-text">
+                        <img src="img/whichpath.png" alt="a person struggling to choose which path to take" width="150"
+                            height="150">
+                        <p>How can you tell which path is the correct one?</p>
+                    </div>
+                    <div class="wrap-image-text">
+                        <img src="img/reality.jpg" alt="a sign that says Welcome to reality" width="150" height="150">
+                        <p>how can we be sure that what we are experiencing right now is reality?</p>
+                    </div>
+                    <div class="wrap-image-text">
+                        <img src="img/universe.jpg" alt="a beautiful image of space" width="150" height="150">
+                        <p>How big is our universe and is there anything outside of it?</p>
+                    </div>
                 </div>
-                <div class="wrap-image-text">
-                    <img src="img/whichpath.png" alt="a person struggling to choose which path to take" width="150"
-                        height="150">
-                    <p>How can you tell which path is the correct one?</p>
-                </div>
-                <div class="wrap-image-text">
-                    <img src="img/reality.jpg" alt="a sign that says Welcome to reality" width="150" height="150">
-                    <p>how can we be sure that what we are experiencing right now is reality?</p>
-                </div>
-                <div class="wrap-image-text">
-                    <img src="img/universe.jpg" alt="a beautiful image of space" width="150" height="150">
-                    <p>How big is our universe and is there anything outside of it?</p>
-                </div>
-
             </section>
 
             <section class="quote grey-bg">
