--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         It's a smaller font and the color is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
-                <img src="img/ying-yang.png" alt="ying and yang symbol" width="250" height="250">
+                <img src="img/ying-yang.png" alt="ying and yang symbol" width="200" height="200">
             </div>
         </header>
 
@@ -67,18 +67,25 @@
             </section>
 
             <section class="quote grey-bg">
-                <h3>Famous Quote</h3>
-                <p class="text"><q>It is difficult to find happiness within oneself, but it is impossible to find it
+
+                <p class="text-light-italic"><q>It is difficult to find happiness within oneself, but it is impossible
+                        to find it
                         anywhere else.</q> </p>
                 <p class="author-quote">-Arthur Schopenhauer</p>
             </section>
-            <section class="Join">
-                <h3>Join us!</h3>
-                <div class="blue">
-                    <p class="medium-white-text">Call to action! it's time!</p>
-                    <p>sign up to join for our product by clicking that button right over there!</p>
+            <section class="join">
+
+                <h3 class="text-center-bold">Join us!</h3>
+                <div class="wrap-button-text">
+                    <div class="blue">
+                        <p class="medium-white-text">Call to action! it's time!</p>
+                        <div class="wrap-button-paragraph">
+                            <p>sign up to join for our product by clicking that button right over there!</p>
+
+                            <button class="join-button">Sign up</button>
+                        </div>
+                    </div>
                 </div>
-                <button class="join-button">Sign up</button>
             </section>
         </main>
         <footer class="dark-bg">
