index.html minor change Added small-text-white class to some p elements and links making it easier to give similar style to multiple elements who now share the same class

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navbar">
                 <div class="logo medium-white-text">Header Logo</div>
 
-                <ul class="nav-links">
+                <ul class="nav-links ">
                     <li><a href="#">header link one</a></li>
                     <li><a href="#">header link two</a></li>
                     <li><a href="#">header link three</a></li>
@@ -31,7 +31,7 @@
                 <div class="wrapper">
                     <!--add comment here -->
                     <h1>This website is awesome</h1>
-                    <p>this website has some subtext that goes here under the main title.
+                    <p class="small-text-white">this website has some subtext that goes here under the main title.
                         It's a smaller font and the color is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
@@ -80,7 +80,8 @@
                     <div class="blue">
                         <p class="medium-white-text">Call to action! it's time!</p>
                         <div class="wrap-button-paragraph">
-                            <p>sign up to join for our product by clicking that button right over there!</p>
+                            <p class="small-text-white">sign up to join for our product by clicking that button right
+                                over there!</p>
 
                             <button class="join-button">Sign up</button>
                         </div>
@@ -90,7 +91,7 @@
         </main>
         <footer class="dark-bg">
 
-            <p>Copyright &copy; The Odin project 2023</p>
+            <p class="text-white-centered small-text-white">Copyright &copy; The Odin project 2023</p>
         </footer>
     </div>
 </body>
