index.html file Added a title for the quote section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
 
             <section class="quote grey-bg">
-
+                <h3 class="text-center-bold reduce-top-margin">Quote</h3>
                 <p class="text-light-italic"><q>It is difficult to find happiness within oneself, but it is impossible
                         to find it
                         anywhere else.</q> </p>
