--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
         <!--direct children will be header main footer-->
 
-        <header class="header dark-bg">
-            <!--we'll also have a display column to put the hero section under the navbar-->
+        <header class=" dark-bg">
+
             <nav class="navbar">
                 <div class="logo medium-white-text">Header Logo</div>
 
@@ -29,7 +29,7 @@
             <div class="hero">
                 <!--set to row so image is next to text-->
                 <div class="wrapper">
-                    <!--add comment here -->
+
                     <h1>This website is awesome</h1>
                     <p class="small-text-white">this website has some subtext that goes here under the main title.
                         It's a smaller font and the color is lower contrast</p>
