--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="wrapper">
 
                     <h1>This website is awesome</h1>
-                    <p class="small-text-white">this website has some subtext that goes here under the main title.
+                    <p class="small-text-white">This website has some subtext that goes here under the main title.
                         It's a smaller font and the color is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="wrap-image-text">
                         <img src="img/reality.jpg" alt="a sign that says Welcome to reality" width="150" height="150">
-                        <p>how can we be sure that what we are experiencing right now is reality?</p>
+                        <p>How can we be sure that what we are experiencing right now is reality?</p>
                     </div>
                     <div class="wrap-image-text">
                         <img src="img/universe.jpg" alt="a beautiful image of space" width="150" height="150">
@@ -91,7 +91,7 @@
         </main>
         <footer class="dark-bg">
 
-            <p class="text-white-centered small-text-white">Copyright &copy; The Odin project 2023</p>
+            <p class="text-white-centered small-text-white">Copyright &copy; kapowlo</p>
         </footer>
     </div>
 </body>
